--- a/260222_MSEW.tex
+++ b/260222_MSEW.tex
@@ -26,19 +26,26 @@
 
 Hello, world. Main text ($\leq 3200$ words and $\leq 5$ figures, incl. the  Title, Abstract, Main Text, Acknowledgements, References, Tables and figure captions.).
 
-We start from the basic equations describing the magnetic dipolar interaction: Maxwell's equations. When the elastic deformation is present, the lattice deviates from its equilibrium positions $\bm{r}$ to $\bm{R}:=\bm{r}+\bm{u}(\bm{r},t)$, where $\bm{u}(\bm{r},t)$ is the displacement field. Then, the Maxwell's equations are rewritten in terms of this new coordinate as
+Our system is schematically shown in Fig.~. Consider a ferromagnetic thin film, that is infinitely large in the $xy$ plane and has a finite thickness $L$ in the $z$ direction. The origin is taken to be in the middle of the film. This film is assumed to be isotropic both magnetically and elastically. We apply an in-plane external magnetic field $\bm{H}_0$ to this system. Then, at equilibrium, saturation magnetization $\bm{M}_0$ appear parallel to $\bm{H}_0$. We study the propagation wave of small deviation from equilibrium magnetization $\bm{m}(\bm{r},t)$. This system also has another propagating wave of elastic deformation. At each position $\bm{r}$, the lattice points are shifted by $\bm{u}(\bm{r},t)$. By this deformation, the distance between magnetic dipoles at each lattice point is modulated and the dipole field $\bm{h}(\bm{r},t)$ created by $\bm{m}$ is also affected by $\bm{u}$ and the system shows the elastomagnetic wave propagation. For simplicity, we consider planewaves with frequency $\omega$ and take the $x$ axis parallel to its propagation direction and assume that the system is uniform in the $y$ direction. Then, $\bm{m}$ and $\bm{u}$ can be written as
+\begin{equation}
+    \bm{m}(\bm{r},t)=\bm{m}(z)e^{i(kx-\omega t)},\\
+    \bm{u}(\bm{r},t)=\bm{u}(z)e^{i(kx-\omega t)}.\label{eq:Assumption}
+\end{equation}
+We study the coupled dynamics of these waves up to the first-order of these quantities. Here, we focus exclusively on the case of in-plane magnetic field. The case of arbitrary external magnetic field will be presented elsewhere.
+
+We start from the basic equations describing the magnetic dipolar interaction: Maxwell's equations. When the elastic deformation is present, the lattice deviates from its equilibrium positions $\bm{r}$ to $\bm{R}:=\bm{r}+\bm{u}(\bm{r},t)$. Then, the Maxwell's equations are rewritten in terms of this new coordinate as
 \begin{equation}
     \nabla_{\bm{R}}\cdot \left(\bm{H}+\bm{M}\right)=0,\qquad
     \nabla_{\bm{R}}\times \bm{H}\approx 0,\label{eq:Maxwell_R}
 \end{equation}
-where in the second equation, the magnetostatic approximation is applied. This approximation is justified when the length scale is long enough so that the dipolar interaction is dominant. We decompose the magnetic field $\bm{H}$ and the magnetization $\bm{M}$ as $\bm{H}=\bm{H}_0+\bm{h}(\bm{r},t)$ and $\bm{M}=\bm{M}_0+\bm{m}(\bm{r},t)$, respectively. Here, $\bm{H}_0$ and $\bm{M}_0$ are quantities at the equilibrium under in-plane external magnetic field and parallel to each other. We consider a wave that is a propagation of small deviations from equilibrium. Assuming that the wave propagaets in the direction parallel to the $x$ axis at frequency $\omega$ and the film is uniform in the $y$ direction, we have $\bm{h}=\bm{h}(z)e^{i(kx-\omega t)}$ and $\bm{m}=\bm{m}(z)e^{i(kx-\omega t)}$. We rewrite Eq.~(\ref{eq:Maxwell_R}) in terms of these quantities in the original coordinate $\bm{r}$. We note that we need to pay attention to the conservation of the magnetization in a unit volume and as a result we get $\bm{M}(\bm{R})=\bm{M}(\bm{r})/\det(J(\bm{r}))$, where $J(\bm{r})$ is a Jacobi matrix (see Supplemental Material~\cite{SM} for detail). We get
+where in the second equation, the magnetostatic approximation is applied and the time-derivative of electric field is discarded. This approximation is justified when the length scale is long enough so that the dipolar interaction is dominant. We decompose the magnetic field $\bm{H}$ and the magnetization $\bm{M}$ as $\bm{H}=\bm{H}_0+\bm{h}(\bm{r},t)$ and $\bm{M}=\bm{M}_0+\bm{m}(\bm{r},t)$, respectively. Here, $\bm{H}_0$ and $\bm{M}_0$ are quantities at the equilibrium under in-plane external magnetic field and parallel to each other. By the planewave assumptions~(\ref{eq:Assumption}), up to the first-order, the dipolar field can also be written as $\bm{h}=\bm{h}(z)e^{i(kx-\omega t)}$. We rewrite Eq.~(\ref{eq:Maxwell_R}) in terms of these quantities in the original coordinate $\bm{r}$. We note that we need to pay attention to the conservation of the magnetization in a unit volume and as a result we get $\bm{M}(\bm{R})=\bm{M}(\bm{r})/\det(J(\bm{r}))$, where $J(\bm{r})$ is a Jacobi matrix (see Supplemental Material~\cite{SM} for detail). We get
 \begin{equation}
     \nabla_{\bm{r}}\cdot\left(\bm{h}(\bm{r})+\bm{m}(\bm{r})\right)=\bm{M}_0\cdot\nabla_{\bm{r}}\left(\nabla_{\bm{r}}\cdot\bm{u}(\bm{r})\right),\label{eq:Maxwell_couple_div}
 \end{equation}
 \begin{equation}
     \nabla_{\bm{r}}\times\bm{h}(\bm{r})=0,\label{eq:Maxwell_couple_rot}
 \end{equation}
-where $\nabla_{\bm{r}}$ stands for derivatives with respect to the coordinate $\bm{r}$. Because the surface of the film is also distorted as in Fig.~, boundary conditions to solvve these equations are also modified by the existence of $\bm{u}$ as
+where $\nabla_{\bm{r}}$ stands for derivatives with respect to the coordinate $\bm{r}$. Because the surface of the film is also distorted as in Fig.~, boundary conditions to solve these equations are also modified by the existence of $\bm{u}$ as
 \begin{equation}
     h^{\mathrm{in}}_x-h_x^{\mathrm{out}}=M_{0,z}\frac{\partial u_z}{\partial x},\label{eq:Maxwell_bc_x}
 \end{equation}
@@ -85,7 +92,7 @@ where
 \end{equation}
 This dipolar field couples the magnetostatic wave and elastic wave on the film. We note that in the current setup, there are no couplings when the equilibrium magnetization is parallel to the $y$ axis, i.e. the external magnetic field is applied in that direction. Otherwise, two waves are coupled via $\bm{h}$.
 
-Next, we examine the effect of the magnetoelastic coupling in the dynamics of the magnetostatic and elastic waves. In the absence of the coupling, the dynamics of magnetization $\bm{m}$ upto its first-order is described by the linearized Landau--Lifshitz equation
+Next, we examine the effect of the magnetoelastic coupling in the dynamics of the magnetostatic and elastic waves. In the absence of the coupling, the dynamics of magnetization $\bm{m}$ up to its first-order is described by the linearized Landau--Lifshitz equation
 \begin{equation}
     \dot{\bm{m}}=-\gamma\left(\bm{m}\times\bm{H}_0+\bm{M}_0\times\bm{h}\right),\label{eq:LandauLifshitz}
 \end{equation}
