--- a/Ref_MSEW.bib
+++ b/Ref_MSEW.bib
@@ -8,5 +8,16 @@
     year = {1986},
     volume = {19},
     pages = {7013},
-    doi = {https://doi.org/10.1088/0022-3719/19/35/014},
+    url = {https://doi.org/10.1088/0022-3719/19/35/014},
+}
+
+@article{damonMagnetostaticModesFerromagnet1961,
+  title = {{Magnetostatic Modes of a Ferromagnet Slab}},
+  author = {Damon, R. W. and Eshbach, J. R.},
+  year = {1961},
+  journal = {Journal of Physics and Chemistry of Solids},
+  volume = {19},
+  pages = {308--320},
+  doi = {10.1016/0022-3697(61)90041-5},
+  url = {https://www.sciencedirect.com/science/article/pii/0022369761900415},
 }
