reference for information of YIG

--- a/Ref_MSEW.bib
+++ b/Ref_MSEW.bib
@@ -21,3 +21,23 @@
   doi = {10.1016/0022-3697(61)90041-5},
   url = {https://www.sciencedirect.com/science/article/pii/0022369761900415},
 }
+
+@article{clarkElasticConstantsSingleCrystal1961,
+  title = {Elastic {{Constants}} of {{Single}}-{{Crystal YIG}}},
+  author = {Clark, A. E. and Strakna, R. E.},
+  date = {1961-06-01},
+  journaltitle = {Journal of Applied Physics},
+  shortjournal = {J. Appl. Phys.},
+  volume = {32},
+  number = {6},
+  pages = {1172--1173},
+  doi = {10.1063/1.1736184},
+  url = {https://doi.org/10.1063/1.1736184},
+}
+
+@book{AulockHandbookofferritematerials,
+  editor = {von Aulock, W. H.},
+  publisher = {Academic Press},
+  title = {Handbook of microwave ferrite materials},
+  year = {1965}
+}
